Fixed issue with jumping to tags and padding

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -92,7 +92,7 @@ pre code {
 }
 /* ======= Header ======= */
 .header {
-  padding: 6px 0;
+  padding: 10px 0;
   background: #17baef;
   color: #fff;
   position: fixed;
